Adiciona link de e-mail e telefone na home

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <!--informa padrão de simbolos--> 
     <title>Desenrolando</title>
   </head>
-
+c 
   <body>
 <nav><!-- menu de nvagação-->
     <p> Desenrolando</p>
@@ -44,7 +44,7 @@
     <section id="parceiros">
         <h2>Parceiros</h2>
         <div>
-            <img src="Img/parceiro.jpg" width="300">
+            <a href="https:www.google.com/"><img src="Img/parceiro.jpg" width="300"></a>
         </div>
     </section>
 
@@ -58,7 +58,12 @@
     <section id="contato">
         <h2>Contato</h2>
         <div>
-            <img src="Img/contato.png" width="300">
+            <img src="Img/email.png" width="25">
+            <p><a href="mailto:contato@empresa.com.br"> contato@empresa.com.br</a></p> <!-- emailto para direcionar para ferramenta de email-->
+        </div>
+        <div>
+            <img src="img/kisspng-telephone-call-mobile-phones-logo-email-download-now-button-5ad5c4e76639b2.0161760515239590154187.jpg" width="25">
+            <p><a href="tel:+5511985395210">(99)9999-9999</a></p>
         </div>
     </section>
 
