Adiciona Target no link

--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@ c
     <section id="parceiros">
         <h2>Parceiros</h2>
         <div>
-            <a href="https:www.google.com/"><img src="Img/parceiro.jpg" width="300"></a>
+            <a href="https:www.google.com/" target="_blank"> <!--target _blank serve para que abra a pag em outra navegação sem fechar o site atual-->
+            <img src="Img/parceiro.jpg" width="300"></a>
         </div>
     </section>
 
