Adiciona link de conexão HTML com CSS

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="pt-br">
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="CSS/style.css"> <!-- link do html com o CSS -->
     <!--informa padrão de simbolos--> 
     <title>Desenrolando</title>
   </head>
