Teste de Style.css

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!--informa padrão de simbolos--> 
     <title>Desenrolando</title>
   </head>
-c 
+
   <body>
 <nav><!-- menu de nvagação-->
     <p> Desenrolando</p>
@@ -19,9 +19,10 @@ c
         <li><a href='#contato'>Contato </a> </li>
     </ul>
 </nav>
-     <p><p>Minha página</p>
+     <p>Minha página</p>
 
   </body>  
+  
   <header><h1> Minha página </h1></header>
 
     <section id="serviços"><!-- defini uma seção// para separação de conteúdo// ID para identificar -->
