Adiciona classe no HTML e CSS

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
      <p>Minha página</p>
 
   </body>  
-  
+
   <header><h1> Minha página </h1></header>
 
     <section id="serviços"><!-- defini uma seção// para separação de conteúdo// ID para identificar -->
@@ -61,11 +61,11 @@
     <section id="contato">
         <h2>Contato</h2>
         <div>
-            <img src="Img/email.png" width="25">
+            <img src="Img/email.png" width="25" class="img_padrao"> <!-- class é criação de classe para determinar estilo no css-->
             <p><a href="mailto:contato@empresa.com.br"> contato@empresa.com.br</a></p> <!-- emailto para direcionar para ferramenta de email-->
         </div>
         <div>
-            <img src="img/kisspng-telephone-call-mobile-phones-logo-email-download-now-button-5ad5c4e76639b2.0161760515239590154187.jpg" width="25">
+            <img src="img/kisspng-telephone-call-mobile-phones-logo-email-download-now-button-5ad5c4e76639b2.0161760515239590154187.jpg" width="25" class="img_padrao">
             <p><a href="tel:+5511985395210">(99)9999-9999</a></p>
         </div>
     </section>
